# get_web_renderer

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html
get_web_renderer/: README.md  pubspec.yaml
get_web_renderer/android/: build.gradle  settings.gradle
get_web_renderer/example/ios/Runner/: Info.plist
get_web_renderer/example/lib/: main.dart
get_web_renderer/example/linux/: CMakeLists.txt  my_application.cc
get_web_renderer/example/web/: manifest.json
get_web_renderer/example/windows/: CMakeLists.txt
get_web_renderer/ios/Classes/: GetWebRendererPlugin.h  GetWebRendererPlugin.m
get_web_renderer/lib/: get_web_renderer.dart  get_web_renderer_web.dart
get_web_renderer/linux/: CMakeLists.txt  get_web_renderer_plugin.cc
get_web_renderer/linux/include/get_web_renderer/: get_web_renderer_plugin.h
get_web_renderer/macos/: get_web_renderer.podspec
get_web_renderer/macos/Classes/: GetWebRendererPlugin.swift
get_web_renderer/test/: get_web_renderer_test.dart
get_web_renderer/windows/: CMakeLists.txt  get_web_renderer_plugin.cpp
ios/: get_web_renderer.podspec
ios/Classes/: SwiftGetWebRendererPlugin.swift
lib/: get_web_renderer.dart
lib/src/: get_web_renderer.dart  get_web_renderer_stub.dart  get_web_renderer_web.dart
test/: get_web_renderer_test.dart
(+15 files in other folders)
